force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__AwardDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__AwardDate__c</fullName>
    <label>Award Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AwardDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>