force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__AwardStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__AwardStatus__c</fullName>
    <label>Award Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AwardStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>