force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__IsActive__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsActive</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>