force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__rel_1720291139437_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291139437_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyAward_ReceivingPartyId_map_Part_rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyAward_ReceivingPartyId_map_Part_rel</relationshipLabel>
    <relationshipName>rel_1720291139437_end</relationshipName>
    <type>Lookup</type>
</CustomField>