force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__rel_1720291147801_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1720291147801_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PartyAward_IssuingPartyId_map_Party__rel</label>
    <referenceTo>ssot__Party__dlm</referenceTo>
    <relationshipLabel>PartyAward_IssuingPartyId_map_Party__rel</relationshipLabel>
    <relationshipName>rel_1720291147801_end</relationshipName>
    <type>Lookup</type>
</CustomField>