force-app/main/default/objects/ssot__PartyAward__dlm/fields/ssot__VerifiedDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__VerifiedDate__c</fullName>
    <label>Verified Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>VerifiedDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>